--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -24,7 +24,7 @@ spec:
                 name: tickets-srv
                 port:
                   number: 3000
-          - path: /api/tickets/?(.*)
+          - path: /api/orders/?(.*)
             pathType: Prefix
             backend:
               service:
