--- a/payments/package.json
+++ b/payments/package.json
@@ -10,6 +10,7 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
+    "testTimeout": 4000000,
     "setupFilesAfterEnv": [
       "./src/test/setup.ts"
     ]
@@ -23,6 +24,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
     "cookie-session": "^1.4.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.13.0",
