--- a/.github/workflows/tests-orders.yml
+++ b/.github/workflows/tests-orders.yml
@@ -1,4 +1,4 @@
-name: tests-order
+name: tests-orders
 
 on:
   pull_request
@@ -8,5 +8,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: cd order && npm install && npm run test:ci
+      - run: cd orders && npm install && npm run test:ci
       
