--- a/.github/workflows/tests-payments.yaml
+++ b/.github/workflows/tests-payments.yaml
@@ -10,5 +10,4 @@ jobs:
       - uses: actions/checkout@v2
       - run: cd payments && npm install && npm run test:ci
         env:
-          STRIPE_KEY: ${{ secrets.SECRET_KEY }}
-      
+          STRIPE_KEY: ${{ secrets.STRIPE_KEY }}
