--- a/infra/k8s/orders-depl.yaml
+++ b/infra/k8s/orders-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: orders
-          image: us.gcr.io/central-accord-329914/orders
+          image: us.gcr.io/drostub-dev/orders
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
