--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -5,15 +5,16 @@ on:
     branches:
       - main
     paths:
-      - 'infra/k8s-prod/**'
+      - 'infra/k8s/**'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: digitalocean/action-doctl@v2
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v0'
         with:
-          token: ${{ secrets.DIGITAL_OCEAN_ACCESS_TOKEN }}
+          credentials_json: '${{ secrets.GKE_SA_KEY }}'
       - run: doctl kubernetes cluster kubeconfig save ticketing
-      - run: kubectl apply -f infra/k8s-prod
+      - run: kubectl apply -f infra/k8s
