--- a/infra/k8s/client-depl.yaml
+++ b/infra/k8s/client-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: client
-          image: ptavarez/client
+          image: us.gcr.io/drostub-dev/client
 ---
 apiVersion: v1
 kind: Service
