--- a/.github/workflows/deploy-expiration.yaml
+++ b/.github/workflows/deploy-expiration.yaml
@@ -1,26 +1,26 @@
-name: deploy-expiration
+# name: deploy-expiration
 
-on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'expiration/**'
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - 'expiration/**'
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: cd expiration && docker build -t ptavarez/expiration .
-      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker push ptavarez/expiration
-      - id: 'auth'
-        uses: 'google-github-actions/auth@v0'
-        with:
-          credentials_json: '${{ secrets.GKE_SA_KEY }}'
-      - run: doctl kubernetes cluster kubeconfig save ticketing
-      - run: kubectl rollout restart deployment expiration-depl
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - run: cd expiration && docker build -t ptavarez/expiration .
+#       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+#         env:
+#           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+#           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+#       - run: docker push ptavarez/expiration
+#       - id: 'auth'
+#         uses: 'google-github-actions/auth@v0'
+#         with:
+#           credentials_json: '${{ secrets.GKE_SA_KEY }}'
+#       - run: gcloud kubernetes cluster kubeconfig save ticketing
+#       - run: kubectl rollout restart deployment expiration-depl
