GCP Depl Test III

--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -15,7 +15,7 @@ jobs:
   setup-build-publish-deploy:
     name: Setup, Build, Publish, and Deploy the Auth Service
     runs-on: ubuntu-latest
-    environment: development
+    environment: production
 
     steps:
       - name: Checkout
