--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -27,5 +27,6 @@ jobs:
           project_id: ${{ secrets.GKE_PROJECT }}
           export_default_credentials: true
 
-      - run: gcloud kubernetes cluster kubeconfig save ticketing
-      - run: kubectl apply -f infra/k8s
+        run: |-
+          kubectl rollout status deployment/$DEPLOYMENT_NAME
+          kubectl get services -o wide
