--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -1,4 +1,4 @@
-name: Deploy Auth
+name: deploy-auth
 
 on:
   push:
@@ -21,10 +21,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-        run: |-
-          cd auth && docker build -t ptavarez/auth .
-          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-          docker push ptavarez/auth
+      - run: cd auth && docker build -t ptavarez/auth .
+      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - run: docker push ptavarez/auth
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
@@ -38,6 +37,5 @@ jobs:
           project_id: ${{ secrets.GKE_PROJECT }}
           export_default_credentials: true
 
-        run: |-
-          kubectl rollout status deployment/$DEPLOYMENT_NAME
-          kubectl get services -o wide
+      - run: gcloud container cluster kubeconfig save ticketing
+      - run: kubectl rollout restart deployment auth-depl
