--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -6,6 +6,8 @@ on:
       - main
     paths:
       - 'auth/**'
+env:
+  DEPLOYMENT_NAME: auth-depl
 
 env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
@@ -36,6 +38,8 @@ jobs:
           service_account_key: ${{ secrets.GKE_SA_KEY }}
           project_id: ${{ secrets.GKE_PROJECT }}
           export_default_credentials: true
-
-      - run: gcloud container cluster kubeconfig save ticketing
-      - run: kubectl rollout restart deployment auth-depl
+      
+      - name: Deploy
+        run: |-
+          kubectl rollout status deployment/$DEPLOYMENT_NAME
+          kubectl get services -o wide
