--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -15,7 +15,11 @@ spec:
       containers:
         - name: auth
           image: ptavarez/auth
+          ports:
+            - containerPort: 3000
           env:
+            - name: PORT
+              value: '3000'
             - name: MONGO_URI
               value: 'mongodb://auth-mongo-srv:27017/auth'
             - name: JWT_KEY
