--- a/infra/k8s/client-depl.yaml
+++ b/infra/k8s/client-depl.yaml
@@ -15,6 +15,11 @@ spec:
       containers:
         - name: client
           image: ptavarez/client
+          ports:
+            - containerPort: 3000
+          env:
+            - name: PORT
+              value: '3000'
 ---
 apiVersion: v1
 kind: Service
