--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -7,6 +7,8 @@ on:
 
 env:
   DEPLOYMENT_NAME: auth-depl
+  GKE_CLUSTER: dro-box
+  GKE_ZONE: us-east4-a
 
 jobs:
   setup-build-publish-deploy:
@@ -34,8 +36,8 @@ jobs:
       - name: GKE Cluster Connection
         uses: google-github-actions/get-gke-credentials@v0.2.1
         with:
-          cluster_name: ${{ env.GKE_CLUSTER }}
-          location: ${{ env.GKE_ZONE }}
+          cluster_name: $GKE_CLUSTER
+          location: $GKE_ZONE
           credentials: ${{ secrets.GKE_SA_KEY }}
 
       - name: Deploy
