--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -34,9 +34,9 @@ jobs:
 
       # Get the GKE credentials so we can deploy to the cluster
       - name: GKE Cluster Connection
-        uses: google-github-actions/get-gke-credentials@v0.2.1
+      - uses: google-github-actions/get-gke-credentials@v0.2.1
         with:
-          cluster_name: ${{ env.GKE_SA_KEY }}
+          cluster_name: ${{ env.GKE_CLUSTER }}
           location: ${{ env.GKE_ZONE }}
           credentials: ${{ secrets.GKE_SA_KEY }}
 
