--- a/infra/k8s/expiration-depl.yaml
+++ b/infra/k8s/expiration-depl.yaml
@@ -15,13 +15,14 @@ spec:
       containers:
         - name: expiration
           image: ptavarez/expiration
-        - name: NATS_CLIENT_ID
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.name
-        - name: NATS_URL
-          value: 'http://nats-srv:4222'
-        - name: NATS_CLUSTER_ID
-          value: ticketing
-        - name: REDIS_HOST
-          value: expiration-redis-srv
+          env:
+            - name: NATS_CLIENT_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: NATS_URL
+              value: 'http://nats-srv:4222'
+            - name: NATS_CLUSTER_ID
+              value: ticketing
+            - name: REDIS_HOST
+              value: expiration-redis-srv
