--- a/infra/k8s/tickets-depl.yaml
+++ b/infra/k8s/tickets-depl.yaml
@@ -15,21 +15,22 @@ spec:
       containers:
         - name: tickets
           image: ptavarez/tickets
-        - name: NATS_CLIENT_ID
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.name
-        - name: NATS_URL
-          value: 'http://nats-srv:4222'
-        - name: NATS_CLUSTER_ID
-          value: ticketing
-        - name: MONGO_URI
-          value: 'mongodb://tickets-mongo-srv:27017/tickets'
-        - name: JWT_KEY
-          valueFrom:
-            secretKeyRef:
-              name: jwt-secret
-              key: JWT_KEY
+          env:
+            - name: NATS_CLIENT_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: NATS_URL
+              value: 'http://nats-srv:4222'
+            - name: NATS_CLUSTER_ID
+              value: ticketing
+            - name: MONGO_URI
+              value: 'mongodb://tickets-mongo-srv:27017/tickets'
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
 ---
 apiVersion: v1
 kind: Service
