--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -8,8 +8,8 @@ on:
       - 'auth/**'
 env:
   DEPLOYMENT_NAME: auth-depl
-
-env:
+  GKE_CLUSTER: dro-box
+  GKE_ZONE: us-east4-a
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -38,7 +38,15 @@ jobs:
           service_account_key: ${{ secrets.GKE_SA_KEY }}
           project_id: ${{ secrets.GKE_PROJECT }}
           export_default_credentials: true
-      
+
+      # Get the GKE credentials so we can deploy to the cluster
+      - name: GKE Cluster Connection
+        uses: google-github-actions/get-gke-credentials@v0.2.1
+        with:
+          cluster_name: ${{ env.GKE_CLUSTER }}
+          location: ${{ env.GKE_ZONE }}
+          credentials: ${{ secrets.GKE_SA_KEY }}
+
       - name: Deploy
         run: |-
           kubectl apply -f infra/k8s
