--- a/.github/workflows/deploy-client.yaml
+++ b/.github/workflows/deploy-client.yaml
@@ -27,8 +27,8 @@ jobs:
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - run: docker push ptavarez/client
 
-      - id: 'auth1'
-        uses: 'google-github-actions/client@v0'
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v0'
         with:
           credentials_json: '${{ secrets.GKE_SA_KEY }}'
 
