--- a/.github/workflows/deploy-orders.yaml
+++ b/.github/workflows/deploy-orders.yaml
@@ -1,26 +1,54 @@
-# name: deploy-orders
+name: deploy-orders
 
-# on:
-#   push:
-#     branches:
-#       - main
-#     paths:
-#       - 'orders/**'
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - 'orders/**'
+env:
+  DEPLOYMENT_NAME: orders-depl
+  GKE_CLUSTER: dro-box
+  GKE_ZONE: us-east4-a
+  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - run: cd orders && docker build -t ptavarez/orders .
-#       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-#         env:
-#           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-#           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-#       - run: docker push ptavarez/orders
-#       - id: 'auth'
-#         uses: 'google-github-actions/auth@v0'
-#         with:
-#           credentials_json: '${{ secrets.GKE_SA_KEY }}'
-#       - run: gcloud kubernetes cluster kubeconfig save ticketing
-#       - run: kubectl rollout restart deployment orders-depl
+jobs:
+  setup-build-publish-deploy:
+    name: Setup, Build, Publish, and Deploy the Auth Service
+    runs-on: ubuntu-latest
+    environment: production
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - run: cd orders && docker build -t ptavarez/orders .
+      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - run: docker push ptavarez/orders
+
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v0'
+        with:
+          credentials_json: '${{ secrets.GKE_SA_KEY }}'
+
+      - name: gcloud Setup
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          service_account_key: ${{ secrets.GKE_SA_KEY }}
+          project_id: ${{ secrets.GKE_PROJECT }}
+          export_default_credentials: true
+
+      # Get the GKE credentials so we can deploy to the cluster
+      - name: GKE Cluster Connection
+        uses: google-github-actions/get-gke-credentials@v0.2.1
+        with:
+          cluster_name: ${{ env.GKE_CLUSTER }}
+          location: ${{ env.GKE_ZONE }}
+          credentials: ${{ secrets.GKE_SA_KEY }}
+
+      - name: Deploy
+        run: |-
+          kubectl apply -f infra/k8s/orders-depl.yaml
+          kubectl rollout restart deployment orders-depl
+          kubectl get services -o wide
