--- a/.github/workflows/deploy-tickets.yaml
+++ b/.github/workflows/deploy-tickets.yaml
@@ -6,20 +6,49 @@ on:
       - main
     paths:
       - 'tickets/**'
+env:
+  DEPLOYMENT_NAME: tickets-depl
+  GKE_CLUSTER: dro-box
+  GKE_ZONE: us-east4-a
+  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
 jobs:
-  build:
+  setup-build-publish-deploy:
+    name: Setup, Build, Publish, and Deploy the Auth Service
     runs-on: ubuntu-latest
+    environment: production
+
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - run: cd tickets && docker build -t ptavarez/tickets .
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - run: docker push ptavarez/tickets
-      - uses: digitalocean/action-doctl@v2
+
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v0'
         with:
-          token: ${{ secrets.DIGITAL_OCEAN_ACCESS_TOKEN }}
-      - run: doctl kubernetes cluster kubeconfig save ticketing
-      - run: kubectl rollout restart deployment tickets-depl
+          credentials_json: '${{ secrets.GKE_SA_KEY }}'
+
+      - name: gcloud Setup
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          service_account_key: ${{ secrets.GKE_SA_KEY }}
+          project_id: ${{ secrets.GKE_PROJECT }}
+          export_default_credentials: true
+
+      # Get the GKE credentials so we can deploy to the cluster
+      - name: GKE Cluster Connection
+        uses: google-github-actions/get-gke-credentials@v0.2.1
+        with:
+          cluster_name: ${{ env.GKE_CLUSTER }}
+          location: ${{ env.GKE_ZONE }}
+          credentials: ${{ secrets.GKE_SA_KEY }}
+
+      - name: Deploy
+        run: |-
+          kubectl apply -f infra/k8s/tickets-depl.yaml
+          kubectl rollout restart deployment tickets-depl
+          kubectl get services -o wide
