--- a/.github/workflows/deploy-orders.yaml
+++ b/.github/workflows/deploy-orders.yaml
@@ -1,4 +1,4 @@
-name: deploy-orders
+name: Orders Service Deployment
 
 on:
   push:
@@ -23,9 +23,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - run: cd orders && docker build -t ptavarez/orders .
+      - run: cd orders && docker build -t ptavarez/orders:prod .
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      - run: docker push ptavarez/orders
+      - run: docker push ptavarez/orders:prod
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
@@ -49,6 +49,6 @@ jobs:
 
       - name: Deploy
         run: |-
-          kubectl apply -f infra/k8s/orders-depl.yaml
+          kubectl apply -f infra/k8s-prod/orders-depl.yaml
           kubectl rollout restart deployment orders-depl
           kubectl get services -o wide
