--- a/infra/k8s-dev/payments-depl.yaml
+++ b/infra/k8s-dev/payments-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: payments
-          image: ptavarez/payments:prod
+          image: ptavarez/payments:dev
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
