--- a/infra/k8s-dev/tickets-depl.yaml
+++ b/infra/k8s-dev/tickets-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: tickets
-          image: ptavarez/tickets:prod
+          image: ptavarez/tickets:dev
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
