--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,7 +8,7 @@ build:
   googleCloudBuild:
     projectId: drostub-dev
   artifacts:
-    - image: us.gcr.io/drostub-dev/auth:dev
+    - image: us.gcr.io/drostub-dev/auth
       context: auth
       docker:
         dockerfile: Dockerfile
@@ -16,7 +16,7 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-    - image: us.gcr.io/drostub-dev/client:dev
+    - image: us.gcr.io/drostub-dev/client
       context: client
       docker:
         dockerfile: Dockerfile
@@ -24,7 +24,7 @@ build:
         manual:
           - src: '**/*.js'
             dest: .
-    - image: us.gcr.io/drostub-dev/tickets:dev
+    - image: us.gcr.io/drostub-dev/tickets
       context: tickets
       docker:
         dockerfile: Dockerfile
@@ -32,7 +32,7 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-    - image: us.gcr.io/drostub-dev/orders:dev
+    - image: us.gcr.io/drostub-dev/orders
       context: orders
       docker:
         dockerfile: Dockerfile
@@ -40,7 +40,7 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-    - image: us.gcr.io/drostub-dev/expiration:dev
+    - image: us.gcr.io/drostub-dev/expiration
       context: expiration
       docker:
         dockerfile: Dockerfile
@@ -48,7 +48,7 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-    - image: us.gcr.io/drostub-dev/payments:dev
+    - image: us.gcr.io/drostub-dev/payments
       context: payments
       docker:
         dockerfile: Dockerfile
