--- a/infra/k8s-prod/payments-depl.yaml
+++ b/infra/k8s-prod/payments-depl.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: tickets-depl
+  name: payments-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: tickets
+      app: payments
   template:
     metadata:
       labels:
-        app: tickets
+        app: payments
     spec:
       containers:
-        - name: tickets
-          image: ptavarez/tickets
+        - name: payments
+          image: ptavarez/payments:prod
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
@@ -31,16 +31,21 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
+            - name: STRIPE_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: stripe-secret
+                  key: STRIPE_KEY
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: tickets-srv
+  name: payments-srv
 spec:
   selector:
-    app: tickets
+    app: payments
   ports:
-    - name: tickets
+    - name: payments
       protocol: TCP
       port: 3000
       targetPort: 3000
