--- a/.github/workflows/deploy-expiration.yaml
+++ b/.github/workflows/deploy-expiration.yaml
@@ -1,4 +1,4 @@
-name: Expiration Service Deployment
+name: deploy-expiration
 
 on:
   push:
@@ -23,9 +23,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - run: cd expiration && docker build -t ptavarez/expiration:prod .
+      - run: cd expiration && docker build -t ptavarez/expiration .
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      - run: docker push ptavarez/expiration:prod
+      - run: docker push ptavarez/expiration
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
@@ -49,6 +49,6 @@ jobs:
 
       - name: Deploy
         run: |-
-          kubectl apply -f infra/k8s-prod/expiration-depl.yaml
+          kubectl apply -f infra/k8s/expiration-depl.yaml
           kubectl rollout restart deployment expiration-depl
           kubectl get services -o wide
