--- a/infra/k8s/client-depl.yaml
+++ b/infra/k8s/client-depl.yaml
@@ -1,30 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: tickets-mongo-depl
+  name: client-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: tickets-mongo
+      app: client
   template:
     metadata:
       labels:
-        app: tickets-mongo
+        app: client
     spec:
       containers:
-        - name: tickets-mongo
-          image: mongo
+        - name: client
+          image: ptavarez/client
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: tickets-mongo-srv
+  name: client-srv
 spec:
   selector:
-    app: tickets-mongo
+    app: client
   ports:
-    - name: db
+    - name: client
       protocol: TCP
-      port: 27017
-      targetPort: 27017
+      port: 3000
+      targetPort: 3000
+# <3
