--- a/infra/k8s/orders-depl.yaml
+++ b/infra/k8s/orders-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: orders
-          image: ptavarez/orders:prod
+          image: ptavarez/orders
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
