--- a/infra/k8s/tickets-depl.yaml
+++ b/infra/k8s/tickets-depl.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: payments-depl
+  name: tickets-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: payments
+      app: tickets
   template:
     metadata:
       labels:
-        app: payments
+        app: tickets
     spec:
       containers:
-        - name: payments
-          image: ptavarez/payments:prod
+        - name: tickets
+          image: ptavarez/tickets
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
@@ -31,21 +31,16 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
-            - name: STRIPE_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: stripe-secret
-                  key: STRIPE_KEY
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: payments-srv
+  name: tickets-srv
 spec:
   selector:
-    app: payments
+    app: tickets
   ports:
-    - name: payments
+    - name: tickets
       protocol: TCP
       port: 3000
       targetPort: 3000
