--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -1,11 +1,11 @@
-name: deploy-manifests
+name: Deploy Manifests
 
 on:
   push:
     branches:
-      - main
+      - develop
     paths:
-      - 'infra/k8s/**'
+      - 'infra/k8s-prod/**'
   workflow_dispatch:
     inputs:
       logLevel:
@@ -19,15 +19,16 @@ on:
           - debug
 
 env:
-  DEPLOYMENT_NAME: auth-depl
-  GKE_CLUSTER: dro-box
-  GKE_ZONE: us-east4-a
+  GKE_PROJECT: ${{ secrets.GKE_PROJECT }}
+  GKE_SA_KEY: ${{ secrets.GKE_SA_KEY }}
+  GKE_CLUSTER: ${{ secrets.GKE_CLUSTER }}
+  GKE_ZONE: ${{ secrets.GKE_ZONE }}
 
 jobs:
   setup-build-publish-deploy:
-    name: Setup, Build, Publish, and Deploy Manifests
+    name: Deploy Manifests
     runs-on: ubuntu-latest
-    environment: production
+    environment: development
 
     steps:
       - name: Checkout
@@ -36,22 +37,21 @@ jobs:
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: '${{ secrets.GKE_SA_KEY }}'
+          credentials_json: '$GKE_SA_KEY'
 
       - name: gcloud Setup
         uses: google-github-actions/setup-gcloud@master
         with:
-          service_account_key: ${{ secrets.GKE_SA_KEY }}
-          project_id: ${{ secrets.GKE_PROJECT }}
+          service_account_key: $GKE_SA_KEY
+          project_id: $GKE_PROJECT
           export_default_credentials: true
 
-      # Get the GKE credentials so we can deploy to the cluster
       - name: GKE Cluster Connection
         uses: google-github-actions/get-gke-credentials@v0.2.1
         with:
-          cluster_name: ${{ env.GKE_CLUSTER }}
-          location: ${{ env.GKE_ZONE }}
-          credentials: ${{ secrets.GKE_SA_KEY }}
+          cluster_name: $GKE_CLUSTER
+          location: $GKE_ZONE
+          credentials: $GKE_SA_KEY
 
       - name: Deploy
         run: |-
