--- a/.github/workflows/deploy-orders.yaml
+++ b/.github/workflows/deploy-orders.yaml
@@ -1,54 +1,57 @@
-name: deploy-orders
+name: Build Orders Image and Deploy to GKE
 
 on:
   push:
     branches:
-      - main
+      - develop
     paths:
       - 'orders/**'
+
 env:
-  DEPLOYMENT_NAME: orders-depl
-  GKE_CLUSTER: dro-box
-  GKE_ZONE: us-east4-a
+  GKE_PROJECT: ${{ secrets.GKE_PROJECT }}
+  GKE_SA_KEY: ${{ secrets.GKE_SA_KEY }}
+  GKE_CLUSTER: ${{ secrets.GKE_CLUSTER }}
+  GKE_ZONE: ${{ secrets.GKE_ZONE }}
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
 jobs:
   setup-build-publish-deploy:
-    name: Setup, Build, Publish, and Deploy the Auth Service
+    name: SBuild Orders Image and Deploy to GKE
     runs-on: ubuntu-latest
-    environment: production
+    environment: development
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - run: cd orders && docker build -t ptavarez/orders .
-      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      - run: docker push ptavarez/orders
+      - name: Build Image & Push to Docker Hub
+        run: |-
+          cd orders && docker build -t ptavarez/orders .
+          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+          docker push ptavarez/orders
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: '${{ secrets.GKE_SA_KEY }}'
+          credentials_json: '$GKE_SA_KEY'
 
       - name: gcloud Setup
         uses: google-github-actions/setup-gcloud@master
         with:
-          service_account_key: ${{ secrets.GKE_SA_KEY }}
-          project_id: ${{ secrets.GKE_PROJECT }}
+          service_account_key: $GKE_SA_KEY
+          project_id: $GKE_PROJECT
           export_default_credentials: true
 
-      # Get the GKE credentials so we can deploy to the cluster
       - name: GKE Cluster Connection
         uses: google-github-actions/get-gke-credentials@v0.2.1
         with:
-          cluster_name: ${{ env.GKE_CLUSTER }}
-          location: ${{ env.GKE_ZONE }}
-          credentials: ${{ secrets.GKE_SA_KEY }}
+          cluster_name: $GKE_CLUSTER
+          location: $GKE_ZONE
+          credentials: $GKE_SA_KEY
 
       - name: Deploy
         run: |-
-          kubectl apply -f infra/k8s/orders-depl.yaml
+          kubectl apply -f infra/k8s-prod/orders-depl.yaml
           kubectl rollout restart deployment orders-depl
           kubectl get services -o wide
