--- a/.github/workflows/deploy-tickets.yaml
+++ b/.github/workflows/deploy-tickets.yaml
@@ -1,31 +1,35 @@
-name: deploy-tickets
+name: Build Tickets Image and Deploy to GKE
 
 on:
   push:
     branches:
-      - main
+      - develop
     paths:
       - 'tickets/**'
+
 env:
-  DEPLOYMENT_NAME: tickets-depl
-  GKE_CLUSTER: dro-box
-  GKE_ZONE: us-east4-a
+  GKE_PROJECT: ${{ secrets.GKE_PROJECT }}
+  GKE_SA_KEY: ${{ secrets.GKE_SA_KEY }}
+  GKE_CLUSTER: ${{ secrets.GKE_CLUSTER }}
+  GKE_ZONE: ${{ secrets.GKE_ZONE }}
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
 jobs:
   setup-build-publish-deploy:
-    name: Setup, Build, Publish, and Deploy the Auth Service
+    name: Build Tickets Image and Deploy to GKE
     runs-on: ubuntu-latest
-    environment: production
+    environment: development
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - run: cd tickets && docker build -t ptavarez/tickets .
-      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      - run: docker push ptavarez/tickets
+      - name: Build Image & Push to Docker Hub
+        run: |-
+          cd tickets && docker build -t ptavarez/tickets .
+          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+          docker push ptavarez/tickets
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
@@ -39,7 +43,6 @@ jobs:
           project_id: ${{ secrets.GKE_PROJECT }}
           export_default_credentials: true
 
-      # Get the GKE credentials so we can deploy to the cluster
       - name: GKE Cluster Connection
         uses: google-github-actions/get-gke-credentials@v0.2.1
         with:
@@ -49,6 +52,6 @@ jobs:
 
       - name: Deploy
         run: |-
-          kubectl apply -f infra/k8s/tickets-depl.yaml
+          kubectl apply -f infra/k8s-prod/tickets-depl.yaml
           kubectl rollout restart deployment tickets-depl
           kubectl get services -o wide
