--- a/.github/workflows/deploy-client.yaml
+++ b/.github/workflows/deploy-client.yaml
@@ -33,7 +33,7 @@ jobs:
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: '$GKE_SA_KEY'
+          credentials_json: '${{ env.GKE_SA_KEY }}'
 
       - name: gcloud Setup
         uses: google-github-actions/setup-gcloud@master
