--- a/.github/workflows/deploy-tickets.yaml
+++ b/.github/workflows/deploy-tickets.yaml
@@ -37,10 +37,10 @@ jobs:
           credentials_json: '${{ env.GKE_SA_KEY }}'
 
       - name: gcloud Setup
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0
         with:
-          service_account_key: $GKE_SA_KEY
-          project_id: $GKE_PROJECT
+          service_account_key: ${{ env.GKE_SA_KEY }}
+          project_id: ${{ env.GKE_PROJECT }}
           export_default_credentials: true
 
       - name: GKE Cluster Connection
@@ -48,7 +48,7 @@ jobs:
         with:
           cluster_name: ${{ env.GKE_CLUSTER }}
           location: ${{ env.GKE_ZONE }}
-          credentials: $GKE_SA_KEY
+          credentials: ${{ env.GKE_SA_KEY }}
 
       - name: Deploy
         run: |-
