Add Workflow Dispatch to all Actions

--- a/.github/workflows/deploy-client.yaml
+++ b/.github/workflows/deploy-client.yaml
@@ -6,6 +6,17 @@ on:
       - develop
     paths:
       - 'client/**'
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+          - info
+          - warning
+          - debug
 
 env:
   GKE_PROJECT: ${{ secrets.GKE_PROJECT }}
