--- a/.github/workflows/tests-tickets.yaml
+++ b/.github/workflows/tests-tickets.yaml
@@ -4,6 +4,17 @@ on:
   pull_request:
     paths:
       - 'tickets/**'
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+          - info
+          - warning
+          - debug
 
 jobs:
   build:
