--- a/.github/workflows/deploy-client.yaml
+++ b/.github/workflows/deploy-client.yaml
@@ -6,6 +6,17 @@ on:
       - develop
     paths:
       - 'client/**'
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+          - info
+          - warning
+          - debug
 
 env:
   GKE_PROJECT: ${{ secrets.GKE_PROJECT }}
@@ -33,21 +44,21 @@ jobs:
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: '$GKE_SA_KEY'
+          credentials_json: '${{ env.GKE_SA_KEY }}'
 
       - name: gcloud Setup
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0
         with:
-          service_account_key: $GKE_SA_KEY
-          project_id: $GKE_PROJECT
+          service_account_key: ${{ env.GKE_SA_KEY }}
+          project_id: ${{ env.GKE_PROJECT }}
           export_default_credentials: true
 
       - name: GKE Cluster Connection
         uses: google-github-actions/get-gke-credentials@v0.2.1
         with:
-          cluster_name: $GKE_CLUSTER
-          location: $GKE_ZONE
-          credentials: $GKE_SA_KEY
+          cluster_name: ${{ env.GKE_CLUSTER }}
+          location: ${{ env.GKE_ZONE }}
+          credentials: ${{ env.GKE_SA_KEY }}
 
       - name: Deploy
         run: |-
