--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -2,33 +2,22 @@ name: Deploy Manifests
 
 on:
   push:
-    branches:
-      - develop
+    branches: [develop, main]
     paths:
       - 'infra/k8s-prod/**'
-  workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
-        type: choice
-        options:
-          - info
-          - warning
-          - debug
 
 env:
   GKE_PROJECT: ${{ secrets.GKE_PROJECT }}
   GKE_SA_KEY: ${{ secrets.GKE_SA_KEY }}
   GKE_CLUSTER: ${{ secrets.GKE_CLUSTER }}
   GKE_ZONE: ${{ secrets.GKE_ZONE }}
+  ENVIRONMENT: ${{  GITHUB_BASE_REF == 'develop' && 'development' || 'staging' }}
 
 jobs:
   setup-build-publish-deploy:
     name: Deploy Manifests
     runs-on: ubuntu-latest
-    environment: development
+    environment: ${{ ENVIRONMENT }}
 
     steps:
       - name: Checkout
@@ -37,23 +26,23 @@ jobs:
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: '$GKE_SA_KEY'
+          credentials_json: '${{ env.GKE_SA_KEY }}'
 
       - name: gcloud Setup
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0
         with:
-          service_account_key: $GKE_SA_KEY
-          project_id: $GKE_PROJECT
+          service_account_key: ${{ env.GKE_SA_KEY }}
+          project_id: ${{ env.GKE_PROJECT }}
           export_default_credentials: true
 
       - name: GKE Cluster Connection
         uses: google-github-actions/get-gke-credentials@v0.2.1
         with:
-          cluster_name: $GKE_CLUSTER
-          location: $GKE_ZONE
-          credentials: $GKE_SA_KEY
+          cluster_name: ${{ env.GKE_CLUSTER }}
+          location: ${{ env.GKE_ZONE }}
+          credentials: ${{ env.GKE_SA_KEY }}
 
       - name: Deploy
         run: |-
-          kubectl apply -f infra/k8s
+          kubectl apply -f infra/k8s-prod
           kubectl get services -o wide
