--- a/.github/workflows/deploy-tickets.yaml
+++ b/.github/workflows/deploy-tickets.yaml
@@ -6,6 +6,17 @@ on:
       - develop
     paths:
       - 'tickets/**'
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+          - info
+          - warning
+          - debug
 
 env:
   GKE_PROJECT: ${{ secrets.GKE_PROJECT }}
@@ -34,13 +45,13 @@ jobs:
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: '${{ secrets.GKE_SA_KEY }}'
+          credentials_json: '${{ env.GKE_SA_KEY }}'
 
       - name: gcloud Setup
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0
         with:
-          service_account_key: ${{ secrets.GKE_SA_KEY }}
-          project_id: ${{ secrets.GKE_PROJECT }}
+          service_account_key: ${{ env.GKE_SA_KEY }}
+          project_id: ${{ env.GKE_PROJECT }}
           export_default_credentials: true
 
       - name: GKE Cluster Connection
@@ -48,7 +59,7 @@ jobs:
         with:
           cluster_name: ${{ env.GKE_CLUSTER }}
           location: ${{ env.GKE_ZONE }}
-          credentials: ${{ secrets.GKE_SA_KEY }}
+          credentials: ${{ env.GKE_SA_KEY }}
 
       - name: Deploy
         run: |-
