--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -21,3 +21,4 @@ jobs:
         run: |-
           echo: ${{  github.base_ref == 'refs/heads/develop' && 'development' || 'staging' }}
           echo: ${{  github.base_ref }}
+          echo: ${{  github.head_ref }}
