Update Deploy Actions with Conditional Environment (#44)

--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -3,6 +3,19 @@ name: Deploy Manifests
 on:
   push:
     branches: [develop, main]
+    paths:
+      - 'infra/k8s-prod/**'
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+          - info
+          - warning
+          - debug
 
 env:
   GKE_PROJECT: ${{ secrets.GKE_PROJECT }}
@@ -14,7 +27,7 @@ jobs:
   setup-build-publish-deploy:
     name: Deploy Manifests
     runs-on: ubuntu-latest
-    environment: ${{  github.base_ref == 'develop' && 'development' || 'staging' }}
+    environment: ${{  github.ref == 'refs/heads/develop' && 'development' || 'staging' }}
 
     steps:
       - name: Checkout
