--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -78,7 +78,7 @@ jobs:
 
       - name: Deploy
         run: |-
-          CLUSTER_ENV=${{ github.ref == 'refs/heads/develop' && 'dev' || 'prod'}} envsubst < infra/auth-depl.yaml.template > auth-depl.yaml
+          envsubst < infra/auth-depl.yaml.template > auth-depl.yaml
           cat auth-depl.yaml
           kubectl apply -f auth-depl.yaml
           kubectl rollout restart deployment auth-depl
