Update Auth Depl File V

--- a/infra/auth-depl.yaml.template
+++ b/infra/auth-depl.yaml.template
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: auth
           image: ptavarez/auth:${DOCKER_TAG}
+          echo: ${DOCKER_TAG}
           env:
             - name: MONGO_URI
               value: 'mongodb://auth-mongo-srv:27017/auth'
